@@ -722,7 +722,8 @@ void ModuleManager::load_commands(SnortConfig* sc)
 // FIXIT-L currently no way to know whether a module was activated or not
 // so modules with common rules will cause duplicate sid warnings
 // eg http_inspect and nhttp_inspect both have 119:1-34
-// only to avoid that now is to not load plugins with common rules
+// only way to avoid that now is to not load plugins with common rules
+// (we don't want to suppress it because it could mean something is broken)
 void ModuleManager::load_rules(SnortConfig* sc)
 {
     // FIXIT-M callers of ParseConfigString() should not have to push parse loc
