@@ -3,6 +3,7 @@
 -- basic reload restoration
 -- support cmd() form of snort.cmd()
 -- misc FIXITs
+-- converted wizard to fully stateful
 
 120
 -- tweaked --help!
